welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var tab = new Array[Color] (getMondeHauteur())
	

		for (j<- 1 to getMondeLargeur())
	{
		gauche()
		avance()
		droite()
		avance()
		setCouleurBrosse(tab (i))
		baisseBrosse()
	}
	for (i <- 0 to getMondeHauteur()-1)
	{
		tab(i) == getCouleurSol()
		avance()
	}
	
}
